Добавлен функционал обработки инвенторя для Админа, медикаменты и сервисы
